--- a/Test Codes/Test_Encoder_03/Test_Encoder_03.ioc
+++ b/Test Codes/Test_Encoder_03/Test_Encoder_03.ioc
@@ -28,8 +28,8 @@ Mcu.PinsNb=12
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F446RETx
-MxCube.Version=4.26.1
-MxDb.Version=DB.4.0.261
+MxCube.Version=4.27.0
+MxDb.Version=DB.4.0.270
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false
@@ -68,7 +68,7 @@ PH0-OSC_IN.Signal=RCC_OSC_IN
 PH1-OSC_OUT.Mode=HSE-External-Clock-Source
 PH1-OSC_OUT.Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
-ProjectManager.AskForMigrate=false
+ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
@@ -88,8 +88,8 @@ ProjectManager.MainLocation=Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=SW4STM32
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=Test_Encoder_02.ioc
-ProjectManager.ProjectName=Test_Encoder_02
+ProjectManager.ProjectFileName=Test_Encoder_03.ioc
+ProjectManager.ProjectName=Test_Encoder_03
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=SW4STM32
 ProjectManager.ToolChainLocation=
