working on Encoder_03

--- a/Test Codes/Test_Encoder_03/Test_Encoder_03.ioc
+++ b/Test Codes/Test_Encoder_03/Test_Encoder_03.ioc
@@ -141,7 +141,7 @@ RCC.VCOOutputFreq_Value=288000000
 RCC.VCOSAIInputFreq_Value=500000
 RCC.VCOSAIOutputFreq_Value=96000000
 TIM2.IPParameters=Prescaler,Period
-TIM2.Period=4000000000
+TIM2.Period=1500
 TIM2.Prescaler=36
 TIM3.IPParameters=Prescaler,Period
 TIM3.Period=65500
