--- a/Working Codes/FRONTAL/FRONTAL.ioc
+++ b/Working Codes/FRONTAL/FRONTAL.ioc
@@ -32,14 +32,20 @@ KeepUserPlacement=false
 Mcu.Family=STM32F4
 Mcu.IP0=ADC1
 Mcu.IP1=CAN1
+Mcu.IP10=TIM5
+Mcu.IP11=TIM6
+Mcu.IP12=TIM7
+Mcu.IP13=USART1
+Mcu.IP14=USART2
 Mcu.IP2=DMA
 Mcu.IP3=NVIC
 Mcu.IP4=RCC
 Mcu.IP5=SPI1
 Mcu.IP6=SYS
-Mcu.IP7=USART1
-Mcu.IP8=USART2
-Mcu.IPNb=9
+Mcu.IP7=TIM2
+Mcu.IP8=TIM3
+Mcu.IP9=TIM4
+Mcu.IPNb=15
 Mcu.Name=STM32F446R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PH0-OSC_IN
@@ -49,7 +55,14 @@ Mcu.Pin11=PA10
 Mcu.Pin12=PA11
 Mcu.Pin13=PA12
 Mcu.Pin14=VP_SYS_VS_Systick
+Mcu.Pin15=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin16=VP_TIM2_VS_ClockSourceITR
+Mcu.Pin17=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin18=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin19=VP_TIM5_VS_ClockSourceINT
 Mcu.Pin2=PA2
+Mcu.Pin20=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin21=VP_TIM7_VS_ClockSourceINT
 Mcu.Pin3=PA3
 Mcu.Pin4=PA5
 Mcu.Pin5=PA6
@@ -57,7 +70,7 @@ Mcu.Pin6=PA7
 Mcu.Pin7=PB0
 Mcu.Pin8=PC9
 Mcu.Pin9=PA8
-Mcu.PinsNb=15
+Mcu.PinsNb=22
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F446RETx
@@ -78,6 +91,13 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false
+NVIC.TIM2_IRQn=true\:0\:0\:false\:true\:true\:9\:true
+NVIC.TIM4_IRQn=true\:0\:0\:false\:false\:true\:true
+NVIC.TIM5_IRQn=true\:0\:0\:false\:true\:true\:8\:true
+NVIC.TIM6_DAC_IRQn=true\:0\:0\:false\:true\:true\:7\:true
+NVIC.TIM7_IRQn=true\:0\:0\:false\:true\:true\:6\:true
+NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true
+NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
@@ -118,7 +138,7 @@ PH0-OSC_IN.Signal=RCC_OSC_IN
 PH1-OSC_OUT.Mode=HSE-External-Clock-Source
 PH1-OSC_OUT.Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
-ProjectManager.AskForMigrate=false
+ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=3
 ProjectManager.ComputerToolchain=false
@@ -135,6 +155,7 @@ ProjectManager.KeepUserCode=true
 ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Src
+ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=SW4STM32
 ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=FRONTAL.ioc
@@ -143,7 +164,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=SW4STM32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_CAN1_Init-CAN1-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_ADC1_Init-ADC1-false-HAL-true,8-MX_USART1_UART_Init-USART1-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_CAN1_Init-CAN1-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_ADC1_Init-ADC1-false-HAL-true,8-MX_USART1_UART_Init-USART1-false-HAL-true,9-MX_TIM2_Init-TIM2-false-HAL-true,10-MX_TIM3_Init-TIM3-false-HAL-true,11-MX_TIM4_Init-TIM4-false-HAL-true,12-MX_TIM5_Init-TIM5-false-HAL-true,13-MX_TIM6_Init-TIM6-false-HAL-true,14-MX_TIM7_Init-TIM7-false-HAL-true
 RCC.AHBFreq_Value=144000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
 RCC.APB1Freq_Value=36000000
@@ -197,10 +218,42 @@ SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
+TIM2.IPParameters=Prescaler,Period
+TIM2.Period=1000
+TIM2.Prescaler=36
+TIM3.IPParameters=Prescaler,Period
+TIM3.Period=65500
+TIM3.Prescaler=18
+TIM4.IPParameters=Prescaler,Period
+TIM4.Period=2000
+TIM4.Prescaler=3600
+TIM5.IPParameters=Prescaler,Period
+TIM5.Period=2000
+TIM5.Prescaler=36
+TIM6.IPParameters=Prescaler,Period
+TIM6.Period=2000
+TIM6.Prescaler=3600
+TIM7.IPParameters=Prescaler,Period
+TIM7.Period=2000
+TIM7.Prescaler=36
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM2_VS_ClockSourceINT.Mode=Internal
+VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
+VP_TIM2_VS_ClockSourceITR.Mode=TriggerSource_ITR0
+VP_TIM2_VS_ClockSourceITR.Signal=TIM2_VS_ClockSourceITR
+VP_TIM3_VS_ClockSourceINT.Mode=Internal
+VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
+VP_TIM4_VS_ClockSourceINT.Mode=Internal
+VP_TIM4_VS_ClockSourceINT.Signal=TIM4_VS_ClockSourceINT
+VP_TIM5_VS_ClockSourceINT.Mode=Internal
+VP_TIM5_VS_ClockSourceINT.Signal=TIM5_VS_ClockSourceINT
+VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM6_VS_ClockSourceINT.Signal=TIM6_VS_ClockSourceINT
+VP_TIM7_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM7_VS_ClockSourceINT.Signal=TIM7_VS_ClockSourceINT
 board=custom
