--- a/Working Codes/New_with_library/FRONTAL/FRONTAL.ioc
+++ b/Working Codes/New_with_library/FRONTAL/FRONTAL.ioc
@@ -35,8 +35,9 @@ Mcu.IP1=CAN1
 Mcu.IP10=TIM5
 Mcu.IP11=TIM6
 Mcu.IP12=TIM7
-Mcu.IP13=USART1
-Mcu.IP14=USART2
+Mcu.IP13=TIM10
+Mcu.IP14=USART1
+Mcu.IP15=USART2
 Mcu.IP2=DMA
 Mcu.IP3=NVIC
 Mcu.IP4=RCC
@@ -45,7 +46,7 @@ Mcu.IP6=SYS
 Mcu.IP7=TIM2
 Mcu.IP8=TIM3
 Mcu.IP9=TIM4
-Mcu.IPNb=15
+Mcu.IPNb=16
 Mcu.Name=STM32F446R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PH0-OSC_IN
@@ -63,6 +64,7 @@ Mcu.Pin19=VP_TIM5_VS_ClockSourceINT
 Mcu.Pin2=PA2
 Mcu.Pin20=VP_TIM6_VS_ClockSourceINT
 Mcu.Pin21=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin22=VP_TIM10_VS_ClockSourceINT
 Mcu.Pin3=PA3
 Mcu.Pin4=PA5
 Mcu.Pin5=PA6
@@ -70,7 +72,7 @@ Mcu.Pin6=PA7
 Mcu.Pin7=PB0
 Mcu.Pin8=PC9
 Mcu.Pin9=PA8
-Mcu.PinsNb=22
+Mcu.PinsNb=23
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F446RETx
@@ -164,7 +166,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=SW4STM32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_CAN1_Init-CAN1-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_ADC1_Init-ADC1-false-HAL-true,8-MX_USART1_UART_Init-USART1-false-HAL-true,9-MX_TIM2_Init-TIM2-false-HAL-true,10-MX_TIM3_Init-TIM3-false-HAL-true,11-MX_TIM4_Init-TIM4-false-HAL-true,12-MX_TIM5_Init-TIM5-false-HAL-true,13-MX_TIM6_Init-TIM6-false-HAL-true,14-MX_TIM7_Init-TIM7-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_CAN1_Init-CAN1-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_ADC1_Init-ADC1-false-HAL-true,8-MX_USART1_UART_Init-USART1-false-HAL-true,9-MX_TIM2_Init-TIM2-false-HAL-true,10-MX_TIM3_Init-TIM3-false-HAL-true,11-MX_TIM4_Init-TIM4-false-HAL-true,12-MX_TIM5_Init-TIM5-false-HAL-true,13-MX_TIM6_Init-TIM6-false-HAL-true,14-MX_TIM7_Init-TIM7-false-HAL-true,15-MX_TIM10_Init-TIM10-false-HAL-true
 RCC.AHBFreq_Value=144000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
 RCC.APB1Freq_Value=36000000
@@ -218,6 +220,9 @@ SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
+TIM10.IPParameters=Prescaler,Period
+TIM10.Period=10000
+TIM10.Prescaler=18
 TIM2.IPParameters=Prescaler,Period
 TIM2.Period=1000
 TIM2.Prescaler=36
@@ -242,6 +247,8 @@ USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM10_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM10_VS_ClockSourceINT.Signal=TIM10_VS_ClockSourceINT
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 VP_TIM2_VS_ClockSourceITR.Mode=TriggerSource_ITR0
