--- a/Working Codes/New_with_library/PEDALS/Pedals.ioc
+++ b/Working Codes/New_with_library/PEDALS/Pedals.ioc
@@ -51,6 +51,7 @@ KeepUserPlacement=false
 Mcu.Family=STM32F4
 Mcu.IP0=ADC1
 Mcu.IP1=CAN1
+Mcu.IP10=USART2
 Mcu.IP2=DMA
 Mcu.IP3=NVIC
 Mcu.IP4=RCC
@@ -58,8 +59,8 @@ Mcu.IP5=SYS
 Mcu.IP6=TIM2
 Mcu.IP7=TIM3
 Mcu.IP8=TIM4
-Mcu.IP9=USART2
-Mcu.IPNb=10
+Mcu.IP9=TIM7
+Mcu.IPNb=11
 Mcu.Name=STM32F446R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
@@ -72,6 +73,7 @@ Mcu.Pin14=VP_SYS_VS_Systick
 Mcu.Pin15=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin16=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin17=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin18=VP_TIM7_VS_ClockSourceINT
 Mcu.Pin2=PH1-OSC_OUT
 Mcu.Pin3=PC0
 Mcu.Pin4=PA0-WKUP
@@ -80,7 +82,7 @@ Mcu.Pin6=PA2
 Mcu.Pin7=PA3
 Mcu.Pin8=PA4
 Mcu.Pin9=PC6
-Mcu.PinsNb=18
+Mcu.PinsNb=19
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F446RETx
@@ -144,7 +146,7 @@ PH0-OSC_IN.Signal=RCC_OSC_IN
 PH1-OSC_OUT.Mode=HSE-External-Clock-Source
 PH1-OSC_OUT.Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
-ProjectManager.AskForMigrate=true
+ProjectManager.AskForMigrate=false
 ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=2
 ProjectManager.ComputerToolchain=false
@@ -170,7 +172,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=SW4STM32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_ADC1_Init-ADC1-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_CAN1_Init-CAN1-false-HAL-true,8-MX_TIM2_Init-TIM2-false-HAL-true,9-MX_TIM4_Init-TIM4-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_ADC1_Init-ADC1-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_CAN1_Init-CAN1-false-HAL-true,8-MX_TIM2_Init-TIM2-false-HAL-true,9-MX_TIM4_Init-TIM4-false-HAL-true,10-MX_TIM7_Init-TIM7-false-HAL-true
 RCC.AHBFreq_Value=144000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
 RCC.APB1Freq_Value=36000000
@@ -234,6 +236,9 @@ TIM3.Prescaler=42666
 TIM4.IPParameters=Prescaler,Period
 TIM4.Period=500
 TIM4.Prescaler=3600
+TIM7.IPParameters=Prescaler,Period
+TIM7.Period=10000
+TIM7.Prescaler=18
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
@@ -244,4 +249,6 @@ VP_TIM3_VS_ClockSourceINT.Mode=Internal
 VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 VP_TIM4_VS_ClockSourceINT.Mode=Internal
 VP_TIM4_VS_ClockSourceINT.Signal=TIM4_VS_ClockSourceINT
+VP_TIM7_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM7_VS_ClockSourceINT.Signal=TIM7_VS_ClockSourceINT
 board=Pedals
