--- a/Working Codes/New_with_library/FRONTAL/FRONTAL.ioc
+++ b/Working Codes/New_with_library/FRONTAL/FRONTAL.ioc
@@ -51,28 +51,29 @@ Mcu.Name=STM32F446R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PH0-OSC_IN
 Mcu.Pin1=PH1-OSC_OUT
-Mcu.Pin10=PA9
-Mcu.Pin11=PA10
-Mcu.Pin12=PA11
-Mcu.Pin13=PA12
-Mcu.Pin14=VP_SYS_VS_Systick
-Mcu.Pin15=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin16=VP_TIM2_VS_ClockSourceITR
-Mcu.Pin17=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin18=VP_TIM4_VS_ClockSourceINT
-Mcu.Pin19=VP_TIM5_VS_ClockSourceINT
+Mcu.Pin10=PA8
+Mcu.Pin11=PA9
+Mcu.Pin12=PA10
+Mcu.Pin13=PA11
+Mcu.Pin14=PA12
+Mcu.Pin15=VP_SYS_VS_Systick
+Mcu.Pin16=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin17=VP_TIM2_VS_ClockSourceITR
+Mcu.Pin18=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin19=VP_TIM4_VS_ClockSourceINT
 Mcu.Pin2=PA2
-Mcu.Pin20=VP_TIM6_VS_ClockSourceINT
-Mcu.Pin21=VP_TIM7_VS_ClockSourceINT
-Mcu.Pin22=VP_TIM10_VS_ClockSourceINT
+Mcu.Pin20=VP_TIM5_VS_ClockSourceINT
+Mcu.Pin21=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin22=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin23=VP_TIM10_VS_ClockSourceINT
 Mcu.Pin3=PA3
 Mcu.Pin4=PA5
 Mcu.Pin5=PA6
 Mcu.Pin6=PA7
 Mcu.Pin7=PB0
-Mcu.Pin8=PC9
-Mcu.Pin9=PA8
-Mcu.PinsNb=23
+Mcu.Pin8=PC6
+Mcu.Pin9=PC9
+Mcu.PinsNb=24
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F446RETx
@@ -99,7 +100,7 @@ NVIC.TIM4_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.TIM5_IRQn=true\:0\:0\:false\:true\:true\:8\:true
 NVIC.TIM6_DAC_IRQn=true\:0\:0\:false\:true\:true\:7\:true
 NVIC.TIM7_IRQn=true\:0\:0\:false\:true\:true\:6\:true
-NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true
+NVIC.USART1_IRQn=true\:0\:0\:false\:true\:true\:11\:true
 NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false
 PA10.Mode=Asynchronous
@@ -121,11 +122,16 @@ PA6.Signal=SPI1_MISO
 PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
 PA8.Locked=true
-PA8.Signal=GPIO_Output
+PA8.Signal=GPIO_Input
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
 PB0.Locked=true
 PB0.Signal=ADCx_IN8
+PC6.GPIOParameters=GPIO_Speed,PinState
+PC6.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+PC6.Locked=true
+PC6.PinState=GPIO_PIN_SET
+PC6.Signal=GPIO_Output
 PC9.Locked=true
 PC9.Signal=GPIO_Output
 PCC.Checker=false
@@ -141,7 +147,7 @@ PH0-OSC_IN.Signal=RCC_OSC_IN
 PH1-OSC_OUT.Mode=HSE-External-Clock-Source
 PH1-OSC_OUT.Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
-ProjectManager.AskForMigrate=true
+ProjectManager.AskForMigrate=false
 ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=3
 ProjectManager.ComputerToolchain=false
