--- a/Working Codes/New_with_library/FRONTAL/FRONTAL.ioc
+++ b/Working Codes/New_with_library/FRONTAL/FRONTAL.ioc
@@ -77,8 +77,8 @@ Mcu.PinsNb=24
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F446RETx
-MxCube.Version=4.26.0
-MxDb.Version=DB.4.0.260
+MxCube.Version=4.27.0
+MxDb.Version=DB.4.0.270
 NVIC.ADC_IRQn=true\:0\:0\:false\:true\:true\:5\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.CAN1_RX0_IRQn=true\:0\:0\:false\:true\:true\:2\:true
@@ -147,7 +147,7 @@ PH0-OSC_IN.Signal=RCC_OSC_IN
 PH1-OSC_OUT.Mode=HSE-External-Clock-Source
 PH1-OSC_OUT.Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
-ProjectManager.AskForMigrate=false
+ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=3
 ProjectManager.ComputerToolchain=false
@@ -228,7 +228,7 @@ SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
 TIM10.IPParameters=Prescaler,Period
-TIM10.Period=500
+TIM10.Period=5000
 TIM10.Prescaler=36
 TIM2.IPParameters=Prescaler,Period
 TIM2.Period=1000
