--- a/Working Codes/New_with_library/FRONTAL/FRONTAL.ioc
+++ b/Working Codes/New_with_library/FRONTAL/FRONTAL.ioc
@@ -51,29 +51,31 @@ Mcu.Name=STM32F446R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PH0-OSC_IN
 Mcu.Pin1=PH1-OSC_OUT
-Mcu.Pin10=PA8
-Mcu.Pin11=PA9
-Mcu.Pin12=PA10
-Mcu.Pin13=PA11
-Mcu.Pin14=PA12
-Mcu.Pin15=VP_SYS_VS_Systick
-Mcu.Pin16=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin17=VP_TIM2_VS_ClockSourceITR
-Mcu.Pin18=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin19=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin10=PC9
+Mcu.Pin11=PA8
+Mcu.Pin12=PA9
+Mcu.Pin13=PA10
+Mcu.Pin14=PA11
+Mcu.Pin15=PA12
+Mcu.Pin16=PB8
+Mcu.Pin17=VP_SYS_VS_Systick
+Mcu.Pin18=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin19=VP_TIM2_VS_ClockSourceITR
 Mcu.Pin2=PA2
-Mcu.Pin20=VP_TIM5_VS_ClockSourceINT
-Mcu.Pin21=VP_TIM6_VS_ClockSourceINT
-Mcu.Pin22=VP_TIM7_VS_ClockSourceINT
-Mcu.Pin23=VP_TIM10_VS_ClockSourceINT
+Mcu.Pin20=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin21=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin22=VP_TIM5_VS_ClockSourceINT
+Mcu.Pin23=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin24=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin25=VP_TIM10_VS_ClockSourceINT
 Mcu.Pin3=PA3
 Mcu.Pin4=PA5
 Mcu.Pin5=PA6
 Mcu.Pin6=PA7
 Mcu.Pin7=PB0
 Mcu.Pin8=PC6
-Mcu.Pin9=PC9
-Mcu.PinsNb=24
+Mcu.Pin9=PC8
+Mcu.PinsNb=26
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F446RETx
@@ -122,16 +124,20 @@ PA6.Signal=SPI1_MISO
 PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
 PA8.Locked=true
-PA8.Signal=GPIO_Input
+PA8.Signal=GPIO_Output
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
 PB0.Locked=true
 PB0.Signal=ADCx_IN8
+PB8.Locked=true
+PB8.Signal=GPIO_Input
 PC6.GPIOParameters=GPIO_Speed,PinState
 PC6.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PC6.Locked=true
 PC6.PinState=GPIO_PIN_SET
 PC6.Signal=GPIO_Output
+PC8.Locked=true
+PC8.Signal=GPIO_Input
 PC9.Locked=true
 PC9.Signal=GPIO_Output
 PCC.Checker=false
@@ -228,8 +234,8 @@ SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
 TIM10.IPParameters=Prescaler,Period
-TIM10.Period=140
-TIM10.Prescaler=3600
+TIM10.Period=500
+TIM10.Prescaler=36
 TIM2.IPParameters=Prescaler,Period
 TIM2.Period=1000
 TIM2.Prescaler=36
@@ -246,8 +252,8 @@ TIM6.IPParameters=Prescaler,Period
 TIM6.Period=2000
 TIM6.Prescaler=3600
 TIM7.IPParameters=Prescaler,Period
-TIM7.Period=60
-TIM7.Prescaler=3600
+TIM7.Period=2000
+TIM7.Prescaler=36
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 USART2.IPParameters=VirtualMode
