Fixed Encoder code, created enoder checker program

--- a/Working Codes/FRONTAL/FRONTAL.ioc
+++ b/Working Codes/FRONTAL/FRONTAL.ioc
@@ -170,7 +170,7 @@ ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
-ProjectManager.LastFirmware=true
+ProjectManager.LastFirmware=false
 ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Src
 ProjectManager.NoMain=false
@@ -255,8 +255,8 @@ TIM6.IPParameters=Prescaler,Period
 TIM6.Period=2000
 TIM6.Prescaler=3600
 TIM7.IPParameters=Prescaler,Period
-TIM7.Period=6000
-TIM7.Prescaler=36
+TIM7.Period=1000
+TIM7.Prescaler=900
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 USART2.BaudRate=2250000
