--- a/logging/CAN_UART/CAN_UART.ioc
+++ b/logging/CAN_UART/CAN_UART.ioc
@@ -98,6 +98,7 @@ NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.TIM6_DAC_IRQn=true\:0\:0\:false\:true\:true\:4\:true\:true
 NVIC.TIM7_IRQn=true\:0\:0\:false\:true\:true\:5\:true\:true
 NVIC.USART2_IRQn=true\:0\:0\:false\:true\:true\:6\:true\:true
+NVIC.USART3_IRQn=true\:0\:0\:false\:true\:true\:7\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PA0-WKUP.Signal=ADCx_IN0
 PA11.Mode=Master
@@ -163,9 +164,9 @@ RCC.AHBFreq_Value=144000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
 RCC.APB1Freq_Value=36000000
 RCC.APB1TimFreq_Value=72000000
-RCC.APB2CLKDivider=RCC_HCLK_DIV2
-RCC.APB2Freq_Value=72000000
-RCC.APB2TimFreq_Value=144000000
+RCC.APB2CLKDivider=RCC_HCLK_DIV4
+RCC.APB2Freq_Value=36000000
+RCC.APB2TimFreq_Value=72000000
 RCC.CECFreq_Value=32786.88524590164
 RCC.CortexFreq_Value=144000000
 RCC.FCLKCortexFreq_Value=144000000
