--- a/Working Codes/FRONTAL/FRONTAL.ioc
+++ b/Working Codes/FRONTAL/FRONTAL.ioc
@@ -1,278 +1,214 @@
 #MicroXplorer Configuration settings - do not modify
-ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_8
-ADC1.ContinuousConvMode=ENABLE
-ADC1.DMAContinuousRequests=ENABLE
-ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,master,ScanConvMode,ContinuousConvMode,DMAContinuousRequests,NbrOfConversion
-ADC1.NbrOfConversion=1
-ADC1.NbrOfConversionFlag=1
-ADC1.Rank-0\#ChannelRegularConversion=1
-ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
-ADC1.ScanConvMode=ENABLE
-ADC1.master=1
-CAN1.AWUM=ENABLE
-CAN1.BS1=CAN_BS1_12TQ
-CAN1.BS2=CAN_BS2_5TQ
-CAN1.CalculateTimeQuantum=55.55555555555556
-CAN1.IPParameters=CalculateTimeQuantum,Prescaler,BS1,BS2,AWUM
-CAN1.Prescaler=2
-Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
-Dma.ADC1.0.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.ADC1.0.Instance=DMA2_Stream0
-Dma.ADC1.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
-Dma.ADC1.0.MemInc=DMA_MINC_ENABLE
-Dma.ADC1.0.Mode=DMA_NORMAL
-Dma.ADC1.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
-Dma.ADC1.0.PeriphInc=DMA_PINC_DISABLE
-Dma.ADC1.0.Priority=DMA_PRIORITY_LOW
-Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.Request0=ADC1
-Dma.RequestsNb=1
-File.Version=6
-KeepUserPlacement=false
 Mcu.Family=STM32F4
+ProjectManager.MainLocation=Src
+NVIC.CAN1_RX1_IRQn=true\:0\:0\:false\:true\:true\:3\:true\:true
+VP_TIM10_VS_ClockSourceINT.Signal=TIM10_VS_ClockSourceINT
+PH0-OSC_IN.Signal=RCC_OSC_IN
+USART2.IPParameters=VirtualMode,BaudRate
+RCC.CortexFreq_Value=144000000
+ProjectManager.KeepUserCode=true
+Mcu.UserName=STM32F446RETx
+ADC1.ContinuousConvMode=ENABLE
+CAN1.AWUM=ENABLE
+RCC.PLLCLKFreq_Value=144000000
+RCC.PLLQCLKFreq_Value=144000000
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_CAN1_Init-CAN1-false-HAL-true,6-MX_ADC1_Init-ADC1-false-HAL-true,7-MX_TIM2_Init-TIM2-false-HAL-true,8-MX_TIM3_Init-TIM3-false-HAL-true,9-MX_TIM4_Init-TIM4-false-HAL-true,10-MX_TIM5_Init-TIM5-false-HAL-true,11-MX_TIM6_Init-TIM6-false-HAL-true,12-MX_TIM7_Init-TIM7-false-HAL-true,13-MX_TIM10_Init-TIM10-false-HAL-true,14-MX_TIM11_Init-TIM11-false-HAL-true
+PA11.GPIOParameters=GPIO_PuPd
+PA11.Mode=Master
+PC9.Locked=true
+RCC.PLLI2SRCLKFreq_Value=48000000
+PA11.GPIO_PuPd=GPIO_PULLUP
+RCC.SAIAFreq_Value=48000000
+PinOutPanel.RotationAngle=0
+RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
+ProjectManager.StackSize=0x400
+VP_TIM7_VS_ClockSourceINT.Mode=Enable_Timer
+Mcu.IP4=RCC
+RCC.FCLKCortexFreq_Value=144000000
+Mcu.IP5=SYS
+Mcu.IP2=DMA
+NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.ADC_IRQn=true\:0\:0\:false\:true\:true\:5\:true\:true
+Mcu.IP3=NVIC
 Mcu.IP0=ADC1
 Mcu.IP1=CAN1
-Mcu.IP10=TIM5
-Mcu.IP11=TIM6
-Mcu.IP12=TIM7
-Mcu.IP13=TIM10
-Mcu.IP14=TIM11
-Mcu.IP15=USART1
-Mcu.IP16=USART2
-Mcu.IP2=DMA
-Mcu.IP3=NVIC
-Mcu.IP4=RCC
-Mcu.IP5=SPI1
-Mcu.IP6=SYS
-Mcu.IP7=TIM2
-Mcu.IP8=TIM3
-Mcu.IP9=TIM4
-Mcu.IPNb=17
-Mcu.Name=STM32F446R(C-E)Tx
-Mcu.Package=LQFP64
+PA12.Signal=CAN1_TX
+Mcu.UserConstants=
+NVIC.CAN1_TX_IRQn=true\:0\:0\:false\:true\:true\:1\:true\:true
+Mcu.ThirdPartyNb=0
+RCC.SDIOFreq_Value=144000000
+RCC.HCLKFreq_Value=144000000
+Mcu.IPNb=10
+ProjectManager.PreviousToolchain=SW4STM32
+RCC.APB2TimFreq_Value=72000000
+TIM3.Period=65500
+VP_TIM10_VS_ClockSourceINT.Mode=Enable_Timer
+Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
+RCC.SPDIFRXFreq_Value=144000000
+Mcu.Pin6=PC8
+TIM7.Period=1000
+NVIC.DMA2_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+Mcu.Pin7=PC9
+Mcu.Pin8=PA8
+Mcu.Pin9=PA11
+NVIC.CAN1_SCE_IRQn=true\:0\:0\:false\:true\:true\:4\:true\:true
+RCC.VCOSAIOutputFreq_Value=96000000
+Dma.ADC1.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+RCC.AHBFreq_Value=144000000
+PH0-OSC_IN.Mode=HSE-External-Clock-Source
 Mcu.Pin0=PH0-OSC_IN
 Mcu.Pin1=PH1-OSC_OUT
-Mcu.Pin10=PC9
-Mcu.Pin11=PA8
-Mcu.Pin12=PA9
-Mcu.Pin13=PA10
-Mcu.Pin14=PA11
-Mcu.Pin15=PA12
-Mcu.Pin16=PB8
-Mcu.Pin17=VP_SYS_VS_Systick
-Mcu.Pin18=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin19=VP_TIM2_VS_ClockSourceITR
+GPIO.groupedBy=Group By Peripherals
 Mcu.Pin2=PA2
-Mcu.Pin20=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin21=VP_TIM4_VS_ClockSourceINT
-Mcu.Pin22=VP_TIM5_VS_ClockSourceINT
-Mcu.Pin23=VP_TIM6_VS_ClockSourceINT
-Mcu.Pin24=VP_TIM7_VS_ClockSourceINT
-Mcu.Pin25=VP_TIM10_VS_ClockSourceINT
-Mcu.Pin26=VP_TIM11_VS_ClockSourceINT
 Mcu.Pin3=PA3
-Mcu.Pin4=PA5
-Mcu.Pin5=PA6
-Mcu.Pin6=PA7
-Mcu.Pin7=PB0
-Mcu.Pin8=PC6
-Mcu.Pin9=PC8
-Mcu.PinsNb=27
-Mcu.ThirdPartyNb=0
-Mcu.UserConstants=
-Mcu.UserName=STM32F446RETx
-MxCube.Version=5.4.0
-MxDb.Version=DB.5.0.40
-NVIC.ADC_IRQn=true\:0\:0\:false\:true\:true\:5\:true\:true
-NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.CAN1_RX0_IRQn=true\:0\:0\:false\:true\:true\:2\:true\:true
-NVIC.CAN1_RX1_IRQn=true\:0\:0\:false\:true\:true\:3\:true\:true
-NVIC.CAN1_SCE_IRQn=true\:0\:0\:false\:true\:true\:4\:true\:true
-NVIC.CAN1_TX_IRQn=true\:0\:0\:false\:true\:true\:1\:true\:true
-NVIC.DMA2_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.ForceEnableDMAVector=true
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-NVIC.TIM1_UP_TIM10_IRQn=true\:0\:0\:false\:true\:true\:10\:true\:true
-NVIC.TIM2_IRQn=true\:0\:0\:false\:true\:true\:9\:true\:true
-NVIC.TIM4_IRQn=true\:0\:0\:false\:false\:true\:true\:true
-NVIC.TIM5_IRQn=true\:0\:0\:false\:true\:true\:8\:true\:true
-NVIC.TIM6_DAC_IRQn=true\:0\:0\:false\:true\:true\:7\:true\:true
-NVIC.TIM7_IRQn=true\:0\:0\:false\:true\:true\:6\:true\:true
-NVIC.USART1_IRQn=true\:0\:0\:false\:true\:true\:11\:true\:true
-NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+Mcu.Pin4=PB0
+Mcu.Pin5=PC6
+ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_8
+ProjectManager.ProjectBuild=false
+RCC.HSE_VALUE=8000000
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-PA10.Mode=Asynchronous
-PA10.Signal=USART1_RX
-PA11.GPIOParameters=GPIO_PuPd
-PA11.GPIO_PuPd=GPIO_PULLUP
-PA11.Mode=Master
-PA11.Signal=CAN1_RX
-PA12.Mode=Master
-PA12.Signal=CAN1_TX
-PA2.Mode=Asynchronous
-PA2.Signal=USART2_TX
-PA3.Mode=Asynchronous
-PA3.Signal=USART2_RX
-PA5.Mode=Full_Duplex_Master
-PA5.Signal=SPI1_SCK
-PA6.Mode=Full_Duplex_Master
-PA6.Signal=SPI1_MISO
-PA7.Mode=Full_Duplex_Master
-PA7.Signal=SPI1_MOSI
+NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+ADC1.ScanConvMode=ENABLE
 PA8.Locked=true
-PA8.Signal=GPIO_Output
-PA9.Mode=Asynchronous
-PA9.Signal=USART1_TX
-PB0.Locked=true
-PB0.Signal=ADCx_IN8
-PB8.Locked=true
-PB8.Signal=GPIO_Input
-PC6.GPIOParameters=GPIO_Speed,PinState
-PC6.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-PC6.Locked=true
-PC6.PinState=GPIO_PIN_SET
-PC6.Signal=GPIO_Output
-PC8.Locked=true
-PC8.Signal=GPIO_Input
-PC9.Locked=true
-PC9.Signal=GPIO_Output
-PH0-OSC_IN.Mode=HSE-External-Clock-Source
-PH0-OSC_IN.Signal=RCC_OSC_IN
-PH1-OSC_OUT.Mode=HSE-External-Clock-Source
-PH1-OSC_OUT.Signal=RCC_OSC_OUT
-PinOutPanel.RotationAngle=0
-ProjectManager.AskForMigrate=false
+NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.24.1
+MxDb.Version=DB.5.0.40
+VP_TIM7_VS_ClockSourceINT.Signal=TIM7_VS_ClockSourceINT
 ProjectManager.BackupPrevious=false
-ProjectManager.CompilerOptimize=3
-ProjectManager.ComputerToolchain=false
-ProjectManager.CoupleFile=false
+RCC.VCOInputFreq_Value=1000000
+TIM3.Prescaler=18
+Dma.ADC1.0.PeriphInc=DMA_PINC_DISABLE
+File.Version=6
+SH.ADCx_IN8.0=ADC1_IN8,IN8
+PB8.Locked=true
+PA8.Signal=GPIO_Output
+RCC.PLLRCLKFreq_Value=144000000
+NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+Dma.RequestsNb=1
+RCC.PLLI2SoutputFreq_Value=48000000
+ProjectManager.HalAssertFull=false
+PB0.Locked=true
+ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
+ProjectManager.ProjectName=FRONTAL
+PH1-OSC_OUT.Mode=HSE-External-Clock-Source
+RCC.MCO2PinFreq_Value=144000000
+CAN1.Prescaler=2
+Mcu.Package=LQFP64
+RCC.I2S2Freq_Value=48000000
+USART2.VirtualMode=VM_ASYNC
+ProjectManager.ToolChainLocation=
+VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+RCC.APB2CLKDivider=RCC_HCLK_DIV4
+RCC.CECFreq_Value=32786.88524590164
+RCC.APB1TimFreq_Value=72000000
+NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+Dma.ADC1.0.FIFOMode=DMA_FIFOMODE_DISABLE
+RCC.SAIBFreq_Value=48000000
+Dma.Request0=ADC1
+TIM10.IPParameters=Prescaler,Period
+PC6.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+NVIC.TIM7_IRQn=true\:0\:0\:false\:true\:true\:6\:true\:true
 ProjectManager.CustomerFirmwarePackage=
+VP_TIM3_VS_ClockSourceINT.Mode=Internal
+RCC.PLLSAIQCLKFreq_Value=48000000
+PA3.Signal=USART2_RX
+CAN1.CalculateTimeQuantum=55.55555555555556
+RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
+TIM10.Prescaler=72
+ProjectManager.ProjectFileName=FRONTAL.ioc
+Dma.ADC1.0.Instance=DMA2_Stream0
+ADC1.Rank-0\#ChannelRegularConversion=1
+Mcu.PinsNb=16
+ProjectManager.NoMain=false
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,master,ScanConvMode,ContinuousConvMode,DMAContinuousRequests,NbrOfConversion
+CAN1.IPParameters=CalculateTimeQuantum,Prescaler,BS1,BS2,AWUM
+RCC.FMPI2C1Freq_Value=36000000
+RCC.VCOI2SInputFreq_Value=500000
+PC8.Signal=GPIO_Input
+PC6.Signal=GPIO_Output
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
-ProjectManager.DeviceId=STM32F446RETx
-ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.24.1
-ProjectManager.FreePins=false
-ProjectManager.HalAssertFull=false
-ProjectManager.HeapSize=0x200
-ProjectManager.KeepUserCode=true
-ProjectManager.LastFirmware=true
-ProjectManager.LibraryCopy=1
-ProjectManager.MainLocation=Src
-ProjectManager.NoMain=false
-ProjectManager.PreviousToolchain=SW4STM32
-ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=FRONTAL.ioc
-ProjectManager.ProjectName=FRONTAL
-ProjectManager.RegisterCallBack=
-ProjectManager.StackSize=0x400
-ProjectManager.TargetToolchain=Makefile
-ProjectManager.ToolChainLocation=
-ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_CAN1_Init-CAN1-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_ADC1_Init-ADC1-false-HAL-true,8-MX_USART1_UART_Init-USART1-false-HAL-true,9-MX_TIM2_Init-TIM2-false-HAL-true,10-MX_TIM3_Init-TIM3-false-HAL-true,11-MX_TIM4_Init-TIM4-false-HAL-true,12-MX_TIM5_Init-TIM5-false-HAL-true,13-MX_TIM6_Init-TIM6-false-HAL-true,14-MX_TIM7_Init-TIM7-false-HAL-true,15-MX_TIM10_Init-TIM10-false-HAL-true,16-MX_TIM11_Init-TIM11-false-HAL-true
-RCC.AHBFreq_Value=144000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
-RCC.APB1Freq_Value=36000000
-RCC.APB1TimFreq_Value=72000000
-RCC.APB2CLKDivider=RCC_HCLK_DIV4
-RCC.APB2Freq_Value=36000000
-RCC.APB2TimFreq_Value=72000000
-RCC.CECFreq_Value=32786.88524590164
-RCC.CortexFreq_Value=144000000
-RCC.FCLKCortexFreq_Value=144000000
-RCC.FMPI2C1Freq_Value=36000000
+NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+USART2.BaudRate=2250000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=144000000
-RCC.HSE_VALUE=8000000
+PA3.Mode=Asynchronous
+Dma.ADC1.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+CAN1.BS2=CAN_BS2_5TQ
+CAN1.BS1=CAN_BS1_12TQ
+ProjectManager.TargetToolchain=Makefile
+Dma.ADC1.0.Mode=DMA_NORMAL
+Dma.ADC1.0.Priority=DMA_PRIORITY_LOW
+PC6.Locked=true
 RCC.I2S1Freq_Value=48000000
-RCC.I2S2Freq_Value=48000000
-RCC.IPParameters=AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CECFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FMPI2C1Freq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,I2S1Freq_Value,I2S2Freq_Value,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLI2SoutputFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,PLLRCLKFreq_Value,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PLLSAIoutputFreq_Value,PLLSourceVirtual,PWRFreq_Value,SAIAFreq_Value,SAIBFreq_Value,SDIOFreq_Value,SPDIFRXFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,USBFreq_Value,VCOI2SInputFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIInputFreq_Value,VCOSAIOutputFreq_Value
-RCC.MCO2PinFreq_Value=144000000
-RCC.PLLCLKFreq_Value=144000000
+ProjectManager.RegisterCallBack=
+RCC.USBFreq_Value=144000000
+VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
+RCC.PLLSAIoutputFreq_Value=48000000
+PC6.PinState=GPIO_PIN_SET
+RCC.VCOI2SOutputFreq_Value=96000000
+RCC.PLLSAIPCLKFreq_Value=48000000
+TIM7.Prescaler=900
+board=custom
+RCC.VCOOutputFreq_Value=288000000
+ProjectManager.LastFirmware=true
+TIM10.Period=500
+Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+RCC.APB2Freq_Value=36000000
+TIM7.IPParameters=Prescaler,Period
+MxCube.Version=5.4.0
 RCC.PLLI2SPCLKFreq_Value=48000000
+VP_SYS_VS_Systick.Mode=SysTick
+TIM3.IPParameters=Prescaler,Period
+PH1-OSC_OUT.Signal=RCC_OSC_OUT
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+ADC1.DMAContinuousRequests=ENABLE
+SH.ADCx_IN8.ConfNb=1
+ADC1.NbrOfConversion=1
+ProjectManager.FreePins=false
+RCC.IPParameters=AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CECFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FMPI2C1Freq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,I2S1Freq_Value,I2S2Freq_Value,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLI2SoutputFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,PLLRCLKFreq_Value,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PLLSAIoutputFreq_Value,PLLSourceVirtual,PWRFreq_Value,SAIAFreq_Value,SAIBFreq_Value,SDIOFreq_Value,SPDIFRXFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,USBFreq_Value,VCOI2SInputFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIInputFreq_Value,VCOSAIOutputFreq_Value
+ProjectManager.AskForMigrate=false
+Mcu.Name=STM32F446R(C-E)Tx
 RCC.PLLI2SQCLKFreq_Value=48000000
-RCC.PLLI2SRCLKFreq_Value=48000000
-RCC.PLLI2SoutputFreq_Value=48000000
+PA2.Signal=USART2_TX
+ProjectManager.UnderRoot=false
+Mcu.IP8=TIM10
+Mcu.IP9=USART2
+Mcu.IP6=TIM3
+RCC.VCOSAIInputFreq_Value=500000
+Mcu.IP7=TIM7
+ProjectManager.CoupleFile=false
+RCC.SYSCLKFreq_VALUE=144000000
+ADC1.master=1
+PA12.Mode=Master
+NVIC.ForceEnableDMAVector=true
+KeepUserPlacement=false
+NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+ProjectManager.CompilerOptimize=3
+PA11.Signal=CAN1_RX
+Dma.ADC1.0.MemInc=DMA_MINC_ENABLE
+ProjectManager.HeapSize=0x200
+Mcu.Pin15=VP_TIM10_VS_ClockSourceINT
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+Mcu.Pin13=VP_TIM3_VS_ClockSourceINT
+PC6.GPIOParameters=GPIO_Speed,PinState
+Mcu.Pin14=VP_TIM7_VS_ClockSourceINT
+NVIC.TIM1_UP_TIM10_IRQn=true\:0\:0\:false\:true\:true\:10\:true\:true
+ProjectManager.ComputerToolchain=false
+NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
+ADC1.NbrOfConversionFlag=1
+Mcu.Pin11=PB8
+Mcu.Pin12=VP_SYS_VS_Systick
 RCC.PLLM=8
 RCC.PLLN=288
-RCC.PLLQCLKFreq_Value=144000000
-RCC.PLLRCLKFreq_Value=144000000
-RCC.PLLSAIPCLKFreq_Value=48000000
-RCC.PLLSAIQCLKFreq_Value=48000000
-RCC.PLLSAIoutputFreq_Value=48000000
-RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
+Mcu.Pin10=PA12
+PB8.Signal=GPIO_Input
+PA2.Mode=Asynchronous
 RCC.PWRFreq_Value=144000000
-RCC.SAIAFreq_Value=48000000
-RCC.SAIBFreq_Value=48000000
-RCC.SDIOFreq_Value=144000000
-RCC.SPDIFRXFreq_Value=144000000
-RCC.SYSCLKFreq_VALUE=144000000
-RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
-RCC.USBFreq_Value=144000000
-RCC.VCOI2SInputFreq_Value=500000
-RCC.VCOI2SOutputFreq_Value=96000000
-RCC.VCOInputFreq_Value=1000000
-RCC.VCOOutputFreq_Value=288000000
-RCC.VCOSAIInputFreq_Value=500000
-RCC.VCOSAIOutputFreq_Value=96000000
-SH.ADCx_IN8.0=ADC1_IN8,IN8
-SH.ADCx_IN8.ConfNb=1
-SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
-SPI1.CalculateBaudRate=18.0 MBits/s
-SPI1.Direction=SPI_DIRECTION_2LINES
-SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
-SPI1.Mode=SPI_MODE_MASTER
-SPI1.VirtualType=VM_MASTER
-TIM10.IPParameters=Prescaler,Period
-TIM10.Period=500
-TIM10.Prescaler=72
-TIM2.IPParameters=Prescaler,Period
-TIM2.Period=1000
-TIM2.Prescaler=36
-TIM3.IPParameters=Prescaler,Period
-TIM3.Period=65500
-TIM3.Prescaler=18
-TIM4.IPParameters=Prescaler,Period
-TIM4.Period=2000
-TIM4.Prescaler=3600
-TIM5.IPParameters=Prescaler,Period
-TIM5.Period=2000
-TIM5.Prescaler=36
-TIM6.IPParameters=Prescaler,Period
-TIM6.Period=2000
-TIM6.Prescaler=3600
-TIM7.IPParameters=Prescaler,Period
-TIM7.Period=1000
-TIM7.Prescaler=900
-USART1.IPParameters=VirtualMode
-USART1.VirtualMode=VM_ASYNC
-USART2.BaudRate=2250000
-USART2.IPParameters=VirtualMode,BaudRate
-USART2.VirtualMode=VM_ASYNC
-VP_SYS_VS_Systick.Mode=SysTick
-VP_SYS_VS_Systick.Signal=SYS_VS_Systick
-VP_TIM10_VS_ClockSourceINT.Mode=Enable_Timer
-VP_TIM10_VS_ClockSourceINT.Signal=TIM10_VS_ClockSourceINT
-VP_TIM11_VS_ClockSourceINT.Mode=Enable_Timer
-VP_TIM11_VS_ClockSourceINT.Signal=TIM11_VS_ClockSourceINT
-VP_TIM2_VS_ClockSourceINT.Mode=Internal
-VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
-VP_TIM2_VS_ClockSourceITR.Mode=TriggerSource_ITR0
-VP_TIM2_VS_ClockSourceITR.Signal=TIM2_VS_ClockSourceITR
-VP_TIM3_VS_ClockSourceINT.Mode=Internal
-VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
-VP_TIM4_VS_ClockSourceINT.Mode=Internal
-VP_TIM4_VS_ClockSourceINT.Signal=TIM4_VS_ClockSourceINT
-VP_TIM5_VS_ClockSourceINT.Mode=Internal
-VP_TIM5_VS_ClockSourceINT.Signal=TIM5_VS_ClockSourceINT
-VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
-VP_TIM6_VS_ClockSourceINT.Signal=TIM6_VS_ClockSourceINT
-VP_TIM7_VS_ClockSourceINT.Mode=Enable_Timer
-VP_TIM7_VS_ClockSourceINT.Signal=TIM7_VS_ClockSourceINT
-board=custom
+PC8.Locked=true
+PC9.Signal=GPIO_Output
+RCC.APB1Freq_Value=36000000
+PB0.Signal=ADCx_IN8
+ProjectManager.DeviceId=STM32F446RETx
+ProjectManager.LibraryCopy=1
+NVIC.CAN1_RX0_IRQn=true\:0\:0\:false\:true\:true\:2\:true\:true
